--- a/mopidy/frontends/http/data/index.html
+++ b/mopidy/frontends/http/data/index.html
@@ -115,9 +115,7 @@ ws.send("Message to the server, ahoy!");</pre>
       <p>For more information, please refer to the Mopidy documentation at
       <a href="http://docs.mopidy.com/">docs.mopidy.com</a>.</p>
     </div>
-    <script type="text/javascript"
-      src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-    </script>
+    <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
     <script type="text/javascript">
       $(function () {
         var ws = new WebSocket("ws://" + document.location.host + "/ws/");
