http: Use CSS file from mopidy.com

--- a/mopidy/frontends/http/data/index.html
+++ b/mopidy/frontends/http/data/index.html
@@ -3,61 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Mopidy HTTP frontend</title>
-    <style type="text/css">
-      html {
-        background: #e8ecef;
-        color: #555;
-        font-family: "Droid Serif", Georgia, "Times New Roman", Palatino,
-          "Hoefler Text", Baskerville, serif;
-        font-size: 150%;
-        line-height: 1.4em;
-      }
-      body {
-        max-width: 20em;
-        margin: 0 auto;
-      }
-      h1, h2, h3 {
-        font-family: Ubuntu, Arial, Helvetica, "Lucida Grande",
-          Verdana, "Gill Sans", sans-serif;
-        line-height: 1.1em;
-      }
-      a {
-        text-decoration: none;
-        border-bottom: 1px dotted;
-      }
-      pre {
-        background: #e8ecef;
-        color: #555;
-        font-size: 10pt;
-        line-height: 1.2em;
-        overflow: auto;
-        padding: 0.5em 1em;
-      }
-      .box {
-        background: white;
-        border-radius: 5px;
-        box-shadow: 5px 5px 5px #d8dcdf;
-        margin: 2em 0;
-        padding: 1em;
-      }
-      .box a {
-        color: #465158;
-      }
-      .box a:hover {
-        opacity: 0.8;
-      }
-      .box.focus {
-        background: #465158;
-        color: #e8ecef;
-      }
-      .box.focus a {
-        color: #e8ecef;
-      }
-      #ws-console {
-        height: 200px;
-        overflow: auto;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/mopidy.css">
   </head>
   <body>
     <div class="box focus">
