http: Minor HTML/CSS tweaks

--- a/mopidy/frontends/http/data/index.html
+++ b/mopidy/frontends/http/data/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Mopidy HTTP frontend</title>
-    <link rel="stylesheet" type="text/css" href="/mopidy/mopidy.css">
+    <link rel="stylesheet" type="text/css" href="mopidy.css">
   </head>
   <body>
     <div class="box focus">
