--- a/mopidy/frontends/http/data/mopidy.html
+++ b/mopidy/frontends/http/data/mopidy.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Mopidy HTTP frontend</title>
-    <link rel="stylesheet" type="text/css" href="/mopidy/mopidy.css">
-    <style type="text/css">
-      #ws-console {
-        height: 200px;
-        overflow: auto;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="mopidy.css">
   </head>
   <body>
     <div class="box focus">
